# Photon-Quantum-Mechanics-Data-Analysis

./: Geneseo Laser Optics.ipynb  HBT 2.ipynb  README.md
DE2_RS232_CCU_Q72_Changed/: CCUVHD.vhd  CCUVHD.vhd.bak  CMakeLists.txt  DataOut.vhd  DataOut.vhd.bak  DataOutCounter_waveforms.html  HexDisplay.vhd  README.md  RS232coincidencecounter.asm.rpt  RS232coincidencecounter.cdf  RS232coincidencecounter.done  RS232coincidencecounter.fit.rpt  RS232coincidencecounter.fit.summary  RS232coincidencecounter.flow.rpt  RS232coincidencecounter.map.rpt  RS232coincidencecounter.map.summary  RS232coincidencecounter.pin  RS232coincidencecounter.qpf  RS232coincidencecounter.qsf  RS232coincidencecounter.qsf.bak  RS232coincidencecounter.sof  RS232coincidencecounter.sta.rpt  RS232coincidencecounter.sta.summary  RS232coincidencecounter.tan.summary  RS232coincidencecounter.tis_db_list.ddb  RS232coincidencecounter.vhd  RS232coincidencecounter.vhd.bak  RS232coincidencecounter_assignment_defaults.qdf  baud_counter.cmp  baud_counter.vhd  baud_counter_waveforms.html  coincidence_pulse.vhd  coincidence_pulse.vhd.bak  coincidence_pulse_1.vhd.bak  counter.cmp  counter.vhd  counter_waveforms.html  data_select_counter_waveforms.html  data_trigger_counter.cmp  data_trigger_counter.vhd  (+8 more)
DE2_RS232_CCU_Q72_Changed/db/: RS232coincidencecounter.(0).cnf.cdb  RS232coincidencecounter.(0).cnf.hdb  RS232coincidencecounter.(1).cnf.cdb  RS232coincidencecounter.(1).cnf.hdb  RS232coincidencecounter.(10).cnf.cdb  RS232coincidencecounter.(10).cnf.hdb  RS232coincidencecounter.(11).cnf.cdb  RS232coincidencecounter.(11).cnf.hdb  RS232coincidencecounter.(12).cnf.cdb  RS232coincidencecounter.(12).cnf.hdb  RS232coincidencecounter.(13).cnf.cdb  RS232coincidencecounter.(13).cnf.hdb  RS232coincidencecounter.(14).cnf.cdb  RS232coincidencecounter.(14).cnf.hdb  RS232coincidencecounter.(15).cnf.cdb  RS232coincidencecounter.(15).cnf.hdb  RS232coincidencecounter.(2).cnf.cdb  RS232coincidencecounter.(2).cnf.hdb  RS232coincidencecounter.(3).cnf.cdb  RS232coincidencecounter.(3).cnf.hdb  RS232coincidencecounter.(4).cnf.cdb  RS232coincidencecounter.(4).cnf.hdb  RS232coincidencecounter.(5).cnf.cdb  RS232coincidencecounter.(5).cnf.hdb  RS232coincidencecounter.(6).cnf.cdb  RS232coincidencecounter.(6).cnf.hdb  RS232coincidencecounter.(7).cnf.cdb  RS232coincidencecounter.(7).cnf.hdb  RS232coincidencecounter.(8).cnf.cdb  RS232coincidencecounter.(8).cnf.hdb  RS232coincidencecounter.(9).cnf.cdb  RS232coincidencecounter.(9).cnf.hdb  RS232coincidencecounter.ace_cmp.bpm  RS232coincidencecounter.ace_cmp.cdb  RS232coincidencecounter.ace_cmp.hdb  RS232coincidencecounter.amm.cdb  RS232coincidencecounter.asm.qmsg  RS232coincidencecounter.asm.rdb  RS232coincidencecounter.asm_labs.ddb  RS232coincidencecounter.atom.rvd  (+75 more)
DE2_RS232_CCU_Q72_Changed/incremental_db/compiled_partitions/: RS232coincidencecounter.db_info  RS232coincidencecounter.root_partition.cmp.cdb  RS232coincidencecounter.root_partition.cmp.hdb  RS232coincidencecounter.root_partition.cmp.kpt  RS232coincidencecounter.root_partition.cmp.rcfdb  RS232coincidencecounter.root_partition.cmp.re.rcfdb  RS232coincidencecounter.root_partition.map.cdb  RS232coincidencecounter.root_partition.map.dpi  RS232coincidencecounter.root_partition.map.hdb  RS232coincidencecounter.root_partition.map.kpt
LabView/: Coincidence_rs232(4_5).llb  Hardy_Bell_rs232(5_5).llb  MCA(10_2).llb  QSM_rs232(3_1).llb  angle_scan_rs232(5_8).llb  coincidence_time_res_rs232(3_4).llb
