cmake_minimum_required(VERSION 3.10)
project(DE2_RS232_CCU_Q72_Changed)

set(CMAKE_CXX_STANDARD 11)

add_executable(DE2_RS232_CCU_Q72_Changed
        db/altsyncram_2211.tdf
        db/altsyncram_3211.tdf
        db/altsyncram_4211.tdf
        db/altsyncram_5211.tdf
        db/altsyncram_5m21.tdf
        db/altsyncram_6211.tdf
        db/altsyncram_7211.tdf
        db/altsyncram_l801.tdf
        db/altsyncram_m801.tdf
        db/cntr_a4i.tdf
        db/cntr_b4i.tdf
        db/cntr_c4i.tdf
        db/cntr_d4i.tdf
        db/cntr_e4i.tdf
        db/cntr_f4i.tdf
        db/cntr_s2i.tdf
        db/cntr_s8i.tdf
        db/cntr_t8i.tdf
        db/cntr_u8i.tdf
        db/logic_util_heursitic.dat
        db/prev_cmp_RS232coincidencecounter.asm.qmsg
        db/prev_cmp_RS232coincidencecounter.fit.qmsg
        db/prev_cmp_RS232coincidencecounter.map.qmsg
        db/prev_cmp_RS232coincidencecounter.qmsg
        db/prev_cmp_RS232coincidencecounter.tan.qmsg
        "db/RS232coincidencecounter.(0).cnf.cdb"
        "db/RS232coincidencecounter.(0).cnf.hdb"
        "db/RS232coincidencecounter.(1).cnf.cdb"
        "db/RS232coincidencecounter.(1).cnf.hdb"
        "db/RS232coincidencecounter.(10).cnf.cdb"
        "db/RS232coincidencecounter.(10).cnf.hdb"
        "db/RS232coincidencecounter.(11).cnf.cdb"
        "db/RS232coincidencecounter.(11).cnf.hdb"
        "db/RS232coincidencecounter.(12).cnf.cdb"
        "db/RS232coincidencecounter.(12).cnf.hdb"
        "db/RS232coincidencecounter.(13).cnf.cdb"
        "db/RS232coincidencecounter.(13).cnf.hdb"
        "db/RS232coincidencecounter.(14).cnf.cdb"
        "db/RS232coincidencecounter.(14).cnf.hdb"
        "db/RS232coincidencecounter.(15).cnf.cdb"
        "db/RS232coincidencecounter.(15).cnf.hdb"
        "db/RS232coincidencecounter.(2).cnf.cdb"
        "db/RS232coincidencecounter.(2).cnf.hdb"
        "db/RS232coincidencecounter.(3).cnf.cdb"
        "db/RS232coincidencecounter.(3).cnf.hdb"
        "db/RS232coincidencecounter.(4).cnf.cdb"
        "db/RS232coincidencecounter.(4).cnf.hdb"
        "db/RS232coincidencecounter.(5).cnf.cdb"
        "db/RS232coincidencecounter.(5).cnf.hdb"
        "db/RS232coincidencecounter.(6).cnf.cdb"
        "db/RS232coincidencecounter.(6).cnf.hdb"
        "db/RS232coincidencecounter.(7).cnf.cdb"
        "db/RS232coincidencecounter.(7).cnf.hdb"
        "db/RS232coincidencecounter.(8).cnf.cdb"
        "db/RS232coincidencecounter.(8).cnf.hdb"
        "db/RS232coincidencecounter.(9).cnf.cdb"
        "db/RS232coincidencecounter.(9).cnf.hdb"
        db/RS232coincidencecounter.ace_cmp.bpm
        db/RS232coincidencecounter.ace_cmp.cdb
        db/RS232coincidencecounter.ace_cmp.hdb
        db/RS232coincidencecounter.amm.cdb
        db/RS232coincidencecounter.asm.qmsg
        db/RS232coincidencecounter.asm.rdb
        db/RS232coincidencecounter.asm_labs.ddb
        db/RS232coincidencecounter.atom.rvd
        db/RS232coincidencecounter.atom_map.rvd
        db/RS232coincidencecounter.cbx.xml
        db/RS232coincidencecounter.cmp.bpm
        db/RS232coincidencecounter.cmp.cbp
        db/RS232coincidencecounter.cmp.cdb
        db/RS232coincidencecounter.cmp.hdb
        db/RS232coincidencecounter.cmp.kpt
        db/RS232coincidencecounter.cmp.logdb
        db/RS232coincidencecounter.cmp.rdb
        db/RS232coincidencecounter.cmp_merge.kpt
        db/RS232coincidencecounter.cycloneive_io_sim_cache.45um_ff_1200mv_0c_fast.hsd
        db/RS232coincidencecounter.cycloneive_io_sim_cache.45um_ii_1200mv_0c_slow.hsd
        db/RS232coincidencecounter.cycloneive_io_sim_cache.45um_ii_1200mv_85c_slow.hsd
        db/RS232coincidencecounter.db_info
        db/RS232coincidencecounter.eco.cdb
        db/RS232coincidencecounter.fit.qmsg
        db/RS232coincidencecounter.hier_info
        db/RS232coincidencecounter.hif
        db/RS232coincidencecounter.idb.cdb
        db/RS232coincidencecounter.lpc.html
        db/RS232coincidencecounter.lpc.rdb
        db/RS232coincidencecounter.lpc.txt
        db/RS232coincidencecounter.map.bpm
        db/RS232coincidencecounter.map.cbp
        db/RS232coincidencecounter.map.cdb
        db/RS232coincidencecounter.map.hdb
        db/RS232coincidencecounter.map.kpt
        db/RS232coincidencecounter.map.logdb
        db/RS232coincidencecounter.map.qmsg
        db/RS232coincidencecounter.map_bb.cdb
        db/RS232coincidencecounter.map_bb.hdb
        db/RS232coincidencecounter.map_bb.logdb
        db/RS232coincidencecounter.pre_map.cdb
        db/RS232coincidencecounter.pre_map.hdb
        db/RS232coincidencecounter.rpp.qmsg
        db/RS232coincidencecounter.RS232coincidencecounter0.rtl.mif
        db/RS232coincidencecounter.rtlv.hdb
        db/RS232coincidencecounter.rtlv_sg.cdb
        db/RS232coincidencecounter.rtlv_sg_swap.cdb
        db/RS232coincidencecounter.sgate.rvd
        db/RS232coincidencecounter.sgate_sm.rvd
        db/RS232coincidencecounter.sgdiff.cdb
        db/RS232coincidencecounter.sgdiff.hdb
        db/RS232coincidencecounter.sld_design_entry.sci
        db/RS232coincidencecounter.sld_design_entry_dsc.sci
        db/RS232coincidencecounter.smart_action.txt
        db/RS232coincidencecounter.sta.qmsg
        db/RS232coincidencecounter.sta.rdb
        db/RS232coincidencecounter.sta_cmp.7_slow_1200mv_85c.tdb
        db/RS232coincidencecounter.syn_hier_info
        db/RS232coincidencecounter.tis_db_list.ddb
        db/RS232coincidencecounter.tiscmp.fast_1200mv_0c.ddb
        db/RS232coincidencecounter.tiscmp.slow_1200mv_0c.ddb
        db/RS232coincidencecounter.tiscmp.slow_1200mv_85c.ddb
        db/RS232coincidencecounter.tmw_info
        db/RS232coincidencecounter0.rtl.mif
        db/RS232coincidencecounter1.rtl.mif
        db/RS232coincidencecounter2.rtl.mif
        db/RS232coincidencecounter3.rtl.mif
        db/RS232coincidencecounter4.rtl.mif
        db/RS232coincidencecounter5.rtl.mif
        incremental_db/compiled_partitions/RS232coincidencecounter.db_info
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.cdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.dfp
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.hdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.kpt
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.logdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.rcfdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.cmp.re.rcfdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.map.cdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.map.dpi
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.map.hdb
        incremental_db/compiled_partitions/RS232coincidencecounter.root_partition.map.kpt
        incremental_db/README
        0019B90E6129__0-540888757696789.dat
        baud_counter.cmp
        baud_counter.vhd
        baud_counter_wave0.jpg
        baud_counter_waveforms.html
        CCUVHD.vhd
        CCUVHD.vhd.bak
        coincidence_pulse.vhd
        coincidence_pulse.vhd.bak
        coincidence_pulse_1.vhd.bak
        counter.cmp
        counter.vhd
        counter_wave0.jpg
        counter_waveforms.html
        data_select_counter_wave0.jpg
        data_select_counter_waveforms.html
        data_trigger_counter.cmp
        data_trigger_counter.vhd
        data_trigger_counter_wave0.jpg
        data_trigger_counter_waveforms.html
        DataOut.vhd
        DataOut.vhd.bak
        DataOutCounter_waveforms.html
        DE2_pin_assignments.csv
        HexDisplay.vhd
        HexDisplay.vhd.bak
        mux4to1.vhd
        mux4to1.vhd.bak
        one_second_counter.cmp
        one_second_counter.vhd
        one_second_counter_wave0.jpg
        one_second_counter_waveforms.html
        prev_cmp_RS232coincidencecounter.qmsg
        pulse_ander.vhd
        pulse_ander.vhd.bak
        RS232coincidencecounter.asm.rpt
        RS232coincidencecounter.cdf
        RS232coincidencecounter.done
        RS232coincidencecounter.dpf
        RS232coincidencecounter.fit.rpt
        RS232coincidencecounter.fit.summary
        RS232coincidencecounter.flow.rpt
        RS232coincidencecounter.map.rpt
        RS232coincidencecounter.map.summary
        RS232coincidencecounter.pin
        RS232coincidencecounter.pof
        RS232coincidencecounter.qpf
        RS232coincidencecounter.qsf
        RS232coincidencecounter.qsf.bak
        RS232coincidencecounter.qws
        RS232coincidencecounter.sof
        RS232coincidencecounter.sta.rpt
        RS232coincidencecounter.sta.summary
        RS232coincidencecounter.tan.rpt
        RS232coincidencecounter.tan.summary
        RS232coincidencecounter.tis_db_list.ddb
        RS232coincidencecounter.vhd
        RS232coincidencecounter.vhd.bak
        RS232coincidencecounter_assignment_defaults.qdf
        sopc_builder_log.txt
        undo_redo.txt)
